# NotesBetterObsidian

./: CMakeLists.txt  main.cpp
include/: project.h
src/: project.cpp
tests/: project-test.cpp
