cmake_minimum_required(VERSION 3.20)
project(project)
set(wxBUILD_SHARED OFF)
add_subdirectory(wxWidgets)
include_directories(include)
add_executable(project ./main.cpp ./src/project.cpp)
add_executable(project-test ./tests/project-test.cpp ./src/project.cpp)
enable_testing()
add_test(NAME project-test COMMAND project-test --force-colors -d)
target_link_libraries(project wx::net wx::core wx::base)
target_link_libraries(project-test wx::net wx::core wx::base)